Fixed word wrap bug
Fixe bug where a word would not wrap to next line if it exceeded the width of the note-div

--- a/style.css
+++ b/style.css
@@ -41,11 +41,11 @@ html{
 }
 
 .list-item{
-    min-height: 75px;
+    min-height: 50px;
     display: flex;
     margin: 10px 0px 0px 0px;
     padding-bottom: 10px;
-    border-bottom: 2px grey solid;
+    border-bottom: 2px rgb(235, 235, 235) solid;
 }
 
 .date-div{
@@ -60,6 +60,7 @@ html{
 .note-div{
     width: 100%;
     word-wrap: break-word;
+    overflow: hidden;
     white-space: pre-wrap;
 }
 
@@ -73,9 +74,19 @@ html{
 
 .completed-button{
     width: 100%;
+    height: 30px;
     margin-bottom: 10px;
+    font-weight: bold;
+    background-color: rgb(125, 125, 255);
+    border-radius: 10px;
+    border: none;
 }
 
 .delete-button{
-    width: 100%
+    width: 100%;
+    height: 30px;
+    font-weight: bold;
+    background-color: rgb(255, 125, 125);
+    border-radius: 10px;
+    border: none;
 }
